07 Oct 2004  - a new utility virtual.x has been added to upftools 
             that can combine two pseudopotentials in UPF format to 
             produce a third one (in the same format) for the virtual 
             atom Vvirt = x * V1 + (1-x) V2 . For the time being it 
             has only limited functionality as the two pseudos need 
             to be defined on the same radial grid. (SdG)
             - a new utility initial_state.x has been added to PP that
             can computed the core level shift in the initial state
             approximation... in practice the first order derivative of
             the total energy with respect to DeltaV=V(excited)-V(GS).
             It is the analogue (via Janak theorem) of the core eigenvalue
             in the pseudopotential framework where the core electrons
             do not exist. 
             In the present status it require both V(excited) and V(GS) 
             to be defined in the preceeding SCF calculation.  (SdG)

28 Sep 2004  release.sh script updated: Raman/ added (PG)
             SUN compilation problem in mp.f90 (PG)
             More cleanup of parallel variables and pwcom/phcom references.
             (C.S.)

27 Sep 2004  Documentation updated (PG)

27 Sep 2004  XLF workarounds no longer needed (the bug in the compiler has
             been fixed).
             Added a serial fft driver for FFTW needed by parallel PWCOND.
             (C.S.)

27 Sep 2004 Atoms are refolded using PBC in "cubefile" format.
            Several minor problems emerged with multiple compilations: 
            - CPV/compute_scf.f90 / FPMD/compute_scf.f90:
              tcpu was used but not initialized in compute_scf().
            - CPV/wf.f90:
              need to include 'f_defs.h' to get MPI_REAL8
            - Modules/wave_base.f90:
              include "f_defs.h" instead of "../include/f_defs.h" to be
              consistent with other files (and allow out-of-place compilation).